[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-fluent-visualization"
version = "0.14.dev0"
description = "A python wrapper for ansys Fluent visualization"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys/pyfluent-visualization"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
importlib-metadata = {version = "^4.0", python = "<3.9"}
ansys-fluent-core = "~=0.26.dev0"
pyvista = "~=0.44.1"
pyvistaqt = "~=0.11.1"
pyside6 = "~=6.7.2"
matplotlib = ">=3.9.0"

[tool.poetry.urls]
"Documentation" = "https://visualization.fluent.docs.pyansys.com/"
"Source" = "https://github.com/ansys/pyfluent-visualization"
"Tracker" = "https://github.com/ansys/pyfluent-visualization/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.fluent"]

[tool.coverage.report]
show_missing = true
